<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitBuddy</string>
    <string name="title_weight">%1$skg</string>
    <string name="new_exercise_name">new exercise</string>
    <string name="new_workout_name">new workout</string>
    <string name="edit_weight_bar_title">xx.x</string>
    <string name="edit_reps_bar_title">xx</string>
    <string name="edit_sets_bar_title">xx</string>
    <string name="vertical_bar_contentDescription">progressBar</string>
    <string name="vertical_bar_default_text">0</string>
    <string name="action_switch_workout">switch workout</string>
    <string name="action_finish_workout">finish workout</string>
    <string name="action_read_qrcode_failed">qrcode is not a fitbuddy workout</string>
    <string name="dialog_change_weight">change weight of set</string>
    <string name="ok">OK</string>
    <string name="decimal_point">,</string>
    <string name="unsaved_changes">unsaved changes</string>
    <string name="has_deleted_workout">workout deleted</string>
    <string name="has_deleted_exercise">exercise deleted</string>
    <string name="dialog_change_sets">change sets</string>
    <string name="dialog_change_reps">change reps</string>
    <string name="dialog_change_name">change name</string>
    <string name="cab_title_manage_exercises">manage finishedWorkouts</string>
    <string name="action_display_finished_workouts">finished workouts</string>
    <string name="no_exercises_default_text">click to add your first exercise</string>
    <string name="action_undo">UNDO</string>
    <string name="label_exercise_name">Exercise name</string>
    <string name="default_exercise_name">new exercise</string>
    <string name="label_exercise_weight">Weight</string>
    <string name="label_exercise_sets">Sets</string>
    <string name="label_exercise_repetitions">Repetitions</string>
    <string name="exercise_save">save changes</string>
    <string name="exercise_add">add exercise</string>
    <string name="exercise_move_up">move up</string>
    <string name="exercise_move_down">move down</string>
    <string name="exercise_delete">delete</string>
    <string name="workout_save">save changes</string>
    <string name="workout_change_name">change workout name</string>
    <string name="workout_add_new_exercise">add new exercise</string>
    <string name="workout_delete">delete workout</string>
    <string name="workout_new_workout">add new workout</string>
    <string name="workout_share">share workout</string>
    <string name="continue_workout">continue workout</string>

    <string name="placeholder_title">Title</string>
    <string name="placeholder_subtitle">Subtitle</string>
    <string name="menu_home">Start</string>
    <string name="menu_workout">Workout</string>
    <string name="menu_summary">Summary</string>
    <string name="empty_workout_list">Click to add workout</string>
    <string name="empty_exercise_list">Click to add exercise</string>
    <string name="empty_set_list">Click to add set</string>
    <string name="date_never">never</string>
    <string name="btn_share_workout">share workout</string>
    <string name="default_set_weight">-</string>
    <string name="default_set_reps">0</string>
    <string name="decimal_separator">.</string>
    <string name="grouping_separator">,</string>
    <string name="message_save_exercise_without_sets">Please add at least one set</string>
    <string name="message_save_workout_without_exercices">Please add at least one exercise</string>
    <string name="sets_to_delete_count">-</string>
    <string name="workout_active">ACTIVE</string>
    <string name="workout_not_active">START</string>>
</resources>
