<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save_workout"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/workout_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_change_workout_name"
        android:title="@string/workout_change_name"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_add_exercise"
        android:title="@string/workout_add_new_exercise"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_delete_workout"
        android:title="@string/workout_delete"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_add_workout"
        android:title="@string/workout_new_workout"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_share_workout"
        android:title="@string/workout_share"
        app:showAsAction="collapseActionView" />
</menu>