<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.edit.workout.ExerciseListFragment">

    <RelativeLayout
        android:id="@+id/set_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="6dp"
        android:paddingBottom="4dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/set_reps_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:text="@string/label_exercise_repetitions"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:singleLine="true" />

        <TextView
            android:id="@+id/set_reps_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_reps_label_text_view"
            android:text="@string/default_set_reps"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/set_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/set_weight_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:text="@string/label_exercise_weight"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:singleLine="true" />

        <TextView
            android:id="@+id/set_weight_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_weight_label_text_view"
            android:text="@string/default_set_weight"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"/>
    </RelativeLayout>
</LinearLayout>