<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="8dp"
    card_view:cardBackgroundColor="@color/cardsColor"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/placeholder_title"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/item_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_title"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/placeholder_subtitle"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/card_status"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:text="@string/workout_not_active"
            android:textColor="@color/secondaryColor"
            android:theme="@style/Widget.AppCompat.Toolbar.Button.Navigation" />

        <TextView
            android:id="@+id/card_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:text="@string/workout_never_executed"
            android:textColor="?android:textColorHint"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</android.support.v7.widget.CardView>